--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -35,7 +35,9 @@
                         <ul class="nav">
                             <li class="nav-item m-b-xs" ng-repeat="service in services">
                                 <a ng-click="load({service:service._id})" class="nav-link text-muted block">
-                                    <span class="pull-right text-sm label danger rounded" style="background-color: {{service.color}}">23</span> {{service.name}}
+                                    <span class="pull-right text-sm label danger rounded" style="background-color: {{service.color}}">
+                                    {{summaries.services[service._id]}}
+                                    </span> {{service.name}}
                                 </a>
                             </li>
                         </ul>
@@ -49,7 +51,9 @@
                         <ul class="nav">
                             <li class="nav-item m-b-xs" ng-repeat="status in _statuses">
                                 <a ng-click="load({'status.name':status.name})" class="nav-link text-muted block">
-                                    <span class="pull-right text-sm label danger rounded" style="background-color: {{status.color}}">23</span>{{status.name}}</a>
+                                    <span class="pull-right text-sm label danger rounded" style="background-color: {{status.color}}">
+                                        {{summaries.statuses[status.name]}}
+                                    </span>{{status.name}}</a>
                             </li>
                         </ul>
                     </div>
