--- a/app/views/servicerequests/_partials/comments.html
+++ b/app/views/servicerequests/_partials/comments.html
@@ -5,7 +5,7 @@
         <div class="p-a p-y-sm b-t b-b m-b">
             <form>
                 <div class="input-group b-a b-transparent">
-                    <input ng-model="note.content" type="text" class="form-control no-border font-size-12" placeholder="Write your note">
+                    <input ng-model="note.content" type="text" class="form-control no-border font-size-12" placeholder="Write your note" id="internal-comment-box">
                     <span class="input-group-btn" ng-keypress="comment()" ng-keyup="comment()">
                         <button ng-click="comment()" class="btn no-bg no-shadow" type="button">
                             <i class="fa fa-send text-success"></i>
