commit all local changes

--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -15,8 +15,8 @@
                 <li class="nav-header hidden-folded">
                     <span class="text-xs">Main</span>
                 </li>
-                <li ui-sref-active="active">
-                    <a ui-sref="app.issues.list" class="b-default" title="Issues & Service Request">
+                <li>
+                    <a ng-click="onAllIssues()" class="b-default" title="Issues & Service Request">
                         <span class="nav-label">
                             <b class="label label-xs rounded danger"></b>
                         </span>
