--- a/app/views/servicerequests/_partials/create.html
+++ b/app/views/servicerequests/_partials/create.html
@@ -59,11 +59,11 @@
                                     <div class="col-sm-6">
                                         <div class="form-group form-material floating">
                                             <oi-select oi-options="item.name for item in jurisdictions track by item.id" ng-model="servicerequest.jurisdiction" placeholder="Select Area" class="form-control"></oi-select>
-                                           <!--  <label class="floating-label">Area</label> -->
+                                            <!--  <label class="floating-label">Area</label> -->
                                         </div>
                                     </div>
                                 </div>
-                               <!--  <div class="row m-b">
+                                <!--  <div class="row m-b">
                                     <div class="col-sm-6">
                                         <div class="form-group form-material floating">
                                             <input ng-model="servicerequest.priority" ng-required ng-minlength="2" type="text" name="priority" class="form-control" />
@@ -89,7 +89,7 @@
                                 </div>
                             </div>
                             <div class="p-a text-right">
-                                <button ng-click="cancel()" class="btn">Cancel</button>
+                                <button type="button" ng-click="cancel()" class="btn">Cancel</button>
                                 <button type="submit" class="btn info">Submit</button>
                             </div>
                         </div>
