--- a/app/views/servicerequests/_partials/list.html
+++ b/app/views/servicerequests/_partials/list.html
@@ -4,7 +4,7 @@
     <div class="p-a b-b search-servicerequests">
         <form>
             <div class="input-group">
-                <input type="text" ng-change="onSearch()" ng-model="search.q" class="form-control form-control-sm" placeholder="Search Issues ..." required="">
+                <input type="text" ng-change="onSearch()" ng-model="search.q" class="form-control form-control-sm" placeholder="Search Issues ...">
                 <span class="input-group-btn">
                     <button class="btn btn-default btn-sm no-shadow" type="button">
                         <i class="ti-search"></i>
