--- a/app/views/statuses/_partials/action_bar.html
+++ b/app/views/statuses/_partials/action_bar.html
@@ -1,47 +1,33 @@
 <!-- start servicerequest detail action bar -->
 <ul class="nav navbar-nav">
     <li class="nav-item">
-        <a ng-if="mailTo" href="{{mailTo}}" class="nav-link text-muted" title="Send Issue to Area">
+        <a href="{{mailTo}}" class="nav-link text-muted" title="Send Issue to Area">
             <span class="nav-text">
                 <i class="icon-action-undo"></i>
             </span>
         </a>
     </li>
-    <!-- <li class="nav-item b-l p-l p-r">
-        <a class="nav-link text-muted no-border" title="People on Issue">
+    <li class="nav-item">
+        <a ng-click="onEdit()" class="nav-link text-muted" title="Click to edit jurisdiction">
             <span class="nav-text">
-                <i class="icon-people"></i>
+                <i class="icon-pencil" aria-hidden="true"></i>
             </span>
         </a>
     </li>
-    <li class="nav-item b-l p-l p-r">
-        <a class="nav-link text-muted no-border" title="Comments">
-            <span class="nav-text">
-                <i class="fa fa-comments-o"></i>
-            </span>
-        </a>
+    <li>
+        <button ng-disabled="jurisdictionForm.$invalid || !jurisdiction.name || !jurisdiction.domain || !jurisdiction.code" ng-click="save()" ng-show="edit" type="button" class="btn btn-primary btn-md empty-btn" title="Click to save jurisdiction">
+            Save
+        </button>
     </li>
-    <li class="nav-item hidden-sm-down b-l p-l p-r">
-        <a class="nav-link text-muted no-border" title="Work Logs">
-            <span class="nav-text">
-                <i class="fa fa-hourglass-o"></i>
-            </span>
-        </a>
+    <li>
+        <button ng-click="delete(jurisdiction)" ng-show="edit && jurisdiction._id" type="button" class="btn btn-outline btn-default btn-md empty-btn" title="Delete jurisdiction permanently">
+            <i class="icon icon-trash" aria-hidden="true"></i>
+        </button>
     </li>
-    <li class="nav-item hidden-sm-down b-l p-l p-r">
-        <a class="nav-link text-muted no-border" title="Notifications">
-            <span class="nav-text">
-                <i class="fa fa-bell-o"></i>
-                <b class="label rounded danger up">3</b>
-            </span>
-        </a>
+    <li class="nav-item">
+        <button ui-sref="app.jurisdictions.list" type="button" class="btn btn-outline btn-default btn-md empty-btn" title="Cancel jurisdiction edits">
+            <i class="icon ti-close" aria-hidden="true"></i>
+        </button>
     </li>
-    <li title="Delete Issue" class="nav-item b-l p-l">
-        <a ng-click="delete(servicerequest)" class="nav-link text-muted no-border">
-            <span class="nav-text">
-                <i class="fa fa-trash-o"></i>
-            </span>
-        </a>
-    </li> -->
 </ul>
 <!-- end servicerequest detail action bar -->
