--- a/app/views/manage/side_subnav.html
+++ b/app/views/manage/side_subnav.html
@@ -19,7 +19,7 @@
                 <div class="p-a-md nav-active-white" style="padding-bottom: 0rem;padding-left: 1.2rem">
                     <ul class="nav">
                         <li class="nav-item m-b-xs">
-                            <a ui-sref="app.profile" class="nav-link text-muted block" title="My Profile">My Profile</a>
+                            <a hre="#" class="nav-link text-muted block" title="My Profile">My Profile</a>
                         </li>
                     </ul>
                 </div>
@@ -64,17 +64,17 @@
                     <div class="nav-active-white">
                         <ul class="nav">
                             <li ui-sref-active="active" class="nav-item m-b-xs">
-                                <a ui-sref="app.manage.parties" class="nav-link text-muted block">
+                                <a hre="#" class="nav-link text-muted block">
                                 Users
                                 </a>
                             </li>
                             <li ui-sref-active="active" class="nav-item m-b-xs">
-                                <a ui-sref="app.manage.roles" class="nav-link text-muted block">
+                                <a hre="#" class="nav-link text-muted block">
                                 Roles
                                 </a>
                             </li>
                             <li ui-sref-active="active" class="nav-item m-b-xs">
-                                <a ui-sref="app.manage.settings" class="nav-link text-muted block">
+                                <a hre="#" class="nav-link text-muted block">
                                 Configuration
                                 </a>
                             </li>
