--- a/app/views/manage/side_subnav.html
+++ b/app/views/manage/side_subnav.html
@@ -16,13 +16,13 @@
         <div class="row-body scrollable hover">
             <div class="row-inner">
                 <!-- start view all -->
-                <div class="p-a-md nav-active-white" style="padding-bottom: 0rem;padding-left: 1.2rem">
+                <!-- <div class="p-a-md nav-active-white" style="padding-bottom: 0rem;padding-left: 1.2rem">
                     <ul class="nav">
                         <li class="nav-item m-b-xs">
                             <a hre="#" class="nav-link text-muted block" title="My Profile">My Profile</a>
                         </li>
                     </ul>
-                </div>
+                </div> -->
                 <!-- end view all -->
                 <!-- start services menu -->
                 <div class="p-a-md">
