--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -2,7 +2,7 @@
 <div class="navside" data-layout="column">
     <!-- start brand details -->
     <div class="navbar no-radius">
-        <a ui-sref="app.servicerequests.list" class="navbar-brand">
+        <a title="{{ENV.title}}" ui-sref="app.servicerequests.list" class="navbar-brand">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="32" height="32">
                 <circle cx="24" cy="24" r="24" style="fill: rgba(120,130,140,0.7);"></circle>
                 <circle cx="24" cy="0" r="2" fill="#ffffff" class="brand-animate"></circle>
@@ -46,7 +46,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" title="Issue Visualization">
+                    <a href="#" title="Visualization Issues">
                         <span class="nav-icon">
                             <i class="ion-location"></i>
                         </span>
