--- a/app/views/servicerequests/_partials/list.html
+++ b/app/views/servicerequests/_partials/list.html
@@ -30,15 +30,21 @@
                             </span>
                         </div>
                         <div class="list-body">
-                            <span class="pull-right text-xs text-muted">
-                                {{servicerequest.createdAt  | date:'dd MMM yyyy'}}
+                            <span title="Issue Report Date" class="pull-right text-xs text-muted">
+                                {{servicerequest.createdAt  | date:'dd MMM yyyy HH:mm'}}
                             </span>
                             <div class="item-title">
                                 <a href="#" class="_500">{{servicerequest.service.name}} 
-                                <br/><span class="font-size-12">#{{servicerequest.code}}</span></a>
+                                <br/><span title="Issue Number" class="font-size-12">
+                                #{{servicerequest.code}}</span></a>
                             </div>
-                            <small class="block text-muted text-ellipsis">
-                                {{servicerequest.description}}
+                            <small class="block text-xs text-muted text-ellipsis">
+                                <span title="Reporter Name">
+                                <i class="icon-user"></i>&nbsp;&nbsp;{{(servicerequest.reporter.name) || 'NA'}}
+                                </span>
+                                <span class="pull-right" title="Reporter Phone Number">
+                                <i class="icon-phone"></i>&nbsp;&nbsp;{{(servicerequest.reporter.phone) ||'NA'}}
+                                </span>
                             </small>
                         </div>
                     </div>
@@ -50,7 +56,7 @@
     <!-- TODO use infinite scroll insteady of pagination -->
     <div class="p-x-md p-y">
         <div class="btn-group pull-right">
-            <a title="Click To Export Issues" class="btn btn-default btn-xs" ng-csv="export" csv-header="['#','Call Start Time', 'Call End Time', 'Reporter Name', 'Reporter Phone', 'Reporter Account', 'Operator', 'Area', 'Nature', 'Assignee', 'Description', 'Address', 'Status', 'Priority']" filename="issues.csv">
+            <a title="Click To Export Issues" class="btn btn-default btn-xs" ng-csv="export" csv-header="['Issue Number','Call Start Time', 'Call End Time', 'Reporter Name', 'Reporter Phone', 'Reporter Account', 'Operator', 'Area', 'Nature', 'Assignee', 'Description', 'Address', 'Status', 'Priority']" filename="issues.csv">
                 <i class="icon-cloud-download"></i>
             </a>
         </div>
