--- a/app/views/servicerequests/_partials/comments.html
+++ b/app/views/servicerequests/_partials/comments.html
@@ -2,7 +2,7 @@
 <div class="padding b-t">
     <h6 class="m-b" title="Internal Notes & Comments">Internal Notes</h6>
     <div class="p-a">
-        <div class="p-a p-y-sm b-t b-b m-b">
+        <div ng-if="!servicerequest.resolvedAt" class="p-a p-y-sm b-t b-b m-b">
             <form>
                 <div class="input-group b-a b-transparent">
                     <input ng-enter="comment()" ng-model="note.content" type="text" class="form-control no-border font-size-12" placeholder="Write your note" id="internal-comment-box">
