--- a/app/views/servicerequests/_partials/side_subnav.html
+++ b/app/views/servicerequests/_partials/side_subnav.html
@@ -15,7 +15,7 @@
     <!-- end title -->
     <!-- start body -->
     <div class="row-row">
-        <div ng-nicescroll nice-option=" {cursorcolor: '#A3AFB7', cursorwidth: '6px'}" class="row-body scrollable hover">
+        <div class="row-body scrollable hover">
             <div class="row-inner">
                 <!-- start view all -->
                 <div class="p-a-md nav-active-white" style="padding-bottom: 0rem;padding-left: 1.2rem">
