make issue reporting full screen

--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li>
-                    <a ui-sref="app.servicerequests.create" title="Report New Issue or Service Request">
+                    <a ui-sref="app.create_servicerequests" title="Report New Issue or Service Request">
                         <span class="nav-icon">
                             <i class="ion-plus-circled"></i>
                         </span>
